--- a/src/index.css
+++ b/src/index.css
@@ -84,16 +84,6 @@ button:focus-visible {
   display: flex;
 }
 
-.hourlyWeatherFlexBox {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.hourlyWeatherBox p {
-  display: flex;
-  flex-direction: column;
-}
-
 .singleWeatherBox {
   border: 1px solid purple;
   padding: 10px;
@@ -102,4 +92,16 @@ button:focus-visible {
 .hourlyWeatherBox {
   border: 1px solid green;
   padding: 10px;
+}
+
+.hourlyWeatherBox p {
+  display: flex;
+  flex-direction: column;
+}
+
+.hourlyWeatherFlexBox {
+  display: flex;
+  justify-content: space-evenly;
+  border: 1px solid orange;
+  margin: 10px 0px;
 }
